--- a/index.css
+++ b/index.css
@@ -95,11 +95,13 @@
     display: block;
     position: absolute;
     top: 25%;
+    padding: 5px;
 }
 .active1{
     display: block;
     position: absolute;
     top: 32%;
+    padding: 5px;
 }
 .active2{
     display: block; 
@@ -134,6 +136,8 @@
       }
     .answer, .alert1, .alert2 {
         font-size: 12px;
+        padding: 4px;
+        margin-right: 2px;
     }
     #calcBtn{
         width: 23vw;
